--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,9 +20,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@master
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@master
       with:
         java-version: '11'
         distribution: 'temurin'
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build and Push Docker Image 
-      uses: mr-smithers-excellent/docker-build-push@v5
+      uses: mr-smithers-excellent/docker-build-push@master
       with:
         image: mdyasirazeem/demo_application
         registry: docker.io
